--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,5 @@
+
+<!-- 
 <div layout="column" layout-fill>
     <div flex class="content md-content">
         <md-sidenav-container fullscreen class="td-layout-manage-list md-content" flex layout="row">
@@ -10,7 +12,7 @@
                             <button md-icon-button><md-icon>settings</md-icon></button>
                             <button md-icon-button><md-icon>more_vert</md-icon></button>
                         </div>
-                        <div flex layout="row">
+                        <div layout="row">
                             <div flex="none" class="bgc-dark-grey-B15">
                                 <md-button-toggle-group vertical #group="mdButtonToggleGroup">
                                     <md-button-toggle value="files" mdTooltip="File Browser" mdTooltipPosition="after" checked="true">
@@ -25,6 +27,7 @@
                                     <md-button-toggle value="justify" mdTooltip="Cloud Connections" mdTooltipPosition="after">
                                         <md-icon class="push-top push-bottom">filter_drama</md-icon>
                                     </md-button-toggle>
+                                    <span flex></span>
                                 </md-button-toggle-group>
                             </div>
                             <div flex layout="column" class="md-content">
@@ -111,4 +114,4 @@
             </span>
         </div>
     </div>
-</div>
+</div> -->
