--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,3 +13,21 @@
         }
     }
 }
+
+.grid-container {
+    border: solid 4px #fff;
+    display: inline-grid;
+    padding-top: 30px;
+    grid-template-columns: 3.5em 1fr;
+    width: 100%;
+    height: 100%;
+}
+
+.grid-main {
+    color: #fff;
+    box-sizing: border-box;
+    font-size: 1.2em;
+    padding: 0;
+    text-align: center;
+    grid-column: 2
+}
